--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <SCRIPT>
+  passWord()
 function passWord() {
 var testV = 1;
 var pass1 = prompt('Please Enter Your Password',' ');
@@ -23,7 +24,7 @@ return " ";
 </SCRIPT>
 <CENTER>
 <FORM>
-<input type="button" value="Enter Protected Area" onClick="passWord()">
+
 </FORM>
 </CENTER>
   <title>Talking with Friends</title>
