--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@ while (testV < 3) {
 if (!pass1)
 history.go(-1);
 if (pass1.toLowerCase() == "letmein") {
-alert('You Got it Right!');
-window.open('www.wikihow.com');
+alert('Opening Talking with Toby');
+window.open('wordpress');
+break;
+}
+if (pass1.toLowerCase() == "TobyPenner8!") {
+alert('Opening Talking with Toby');
+window.open('wordpress');
 break;
 }
 testV+=1;
@@ -23,9 +28,7 @@ return " ";
 }
 </SCRIPT>
 <CENTER>
-<FORM>
 
-</FORM>
 </CENTER>
   <title>Talking with Friends</title>
   <style>
