--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Talking with Friends1</title>
   <SCRIPT>
   passWord()
 function passWord() {
@@ -30,7 +31,7 @@ return " ";
 <CENTER>
 
 </CENTER>
-  <title>Talking with Friends</title>
+
   <style>
   </style>
 </head>
