--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Talking with Friends1</title>
+    <title>Talking with Friends</title>
   <SCRIPT>
   passWord()
 function passWord() {
@@ -11,7 +11,7 @@ if (!pass1)
 history.go(-1);
 if (pass1.toLowerCase() == "letmein") {
 alert('Opening Talking with Toby');
-window.open('wordpress');
+window.open('projects.html');
 break;
 }
 if (pass1.toLowerCase() == "TobyPenner8!") {
