--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <style>
-@import url('https://fonts.googleapis.com/css?family=Happy+Monkey');
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-#testing {font-family: 'Happy Monkey', cursive;}
+  <style>
+
   </style>
 </head>
 <body>
+<h1 id="homepage-heading">Candy & Co</h1>
 
-<h1 id="testing">Testing</h1>
 
 </body>
 </head>
