--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
   <style>
+body { font-family: 'Quicksand', sans-serif;}
 
   </style>
 </head>
