--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
   <style>
-body { font-family: 'Quicksand', sans-serif;}
+body { font-family: 'Quicksand', sans-serif;
+        text-align: center;}
 
   </style>
 </head>
