--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <style>
 body { font-family: 'Quicksand', sans-serif;
-        text-align: center;}
+        text-align: center; font-size:250px;}
 
   </style>
 </head>
