--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <style>
 body { font-family: 'Quicksand', sans-serif;
-        text-align: center; font-size:250px;}
+        text-align: center; font-size:250px; color:#2c8c99;}
 
   </style>
 </head>
@@ -13,4 +13,4 @@ body { font-family: 'Quicksand', sans-serif;
 
 
 </body>
-</head>
+</html>
