--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <style>
 body { font-family: 'Quicksand', sans-serif;
-        text-align: center; font-size:250px; color:#2c8c99;}
+        text-align: center; font-size:50%; color:#2c8c99;}
 
   </style>
 </head>
