--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 
   <style>
 body { font-family: 'Quicksand', sans-serif;
-        text-align: center; font-size: 50px; color:#2c8c99;}
+        text-align: center; font-size: 50px; color:#42d9c8; }
 
   </style>
 </head>
 <body>
 <h1 id="homepage-heading">Candy & Co</h1>
-
+<form method="get" action="/about.html">
+  <button type="submit">About</button>
+</form>
 
 </body>
 </html>
