--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
   <style>
-body { font-family: 'Quicksand', sans-serif;
+#homepage-heading { font-family: 'Quicksand', sans-serif;
         text-align: center; font-size: 50px; color:#42d9c8; }
 
   </style>
