--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
 
   <style>
 #homepage-heading { font-family: 'Quicksand', sans-serif;
-        text-align: center; font-size: 70px; color:#42d9c8; }
-
+        text-align: center; font-size: 70px; color:#42d9c8;  }
+.dog {  background: #268699;
+  background-image: -webkit-linear-gradient(top, #268699, 42d9c8);
+  background-image: -moz-linear-gradient(top, #268699, 42d9c8);
+  background-image: -ms-linear-gradient(top, #268699, 42d9c8);
+  background-image: -o-linear-gradient(top, #268699, 42d9c8);
+  background-image: linear-gradient(to bottom, #268699, 42d9c8);
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 60px;
+font-family: 'Quicksand', sans-serif;
+  color: #42d9c8;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;}
   </style>
 </head>
 <body>
 <h1 id="homepage-heading">Candy & Co</h1>
 <form method="get" action="/about.html">
-  <button type="submit">About</button>
+  <button class="dog"type="submit">About</button>
 </form>
 
 </body>
