--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@ font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;}
+
+  .dog:hover {
+
+    background: #28464b;
+     text-decoration: none;
+
+  }
   </style>
 </head>
 <body>
