--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <style>
 #homepage-heading { font-family: 'Quicksand', sans-serif;
-        text-align: center; font-size: 70px; color:#42d9c8;  }
+        text-align: center; font-size: 70px; color:#42d9c8;}
 .dog {  background: #268699;
   background-image: -webkit-linear-gradient(top, #268699, 42d9c8);
   background-image: -moz-linear-gradient(top, #268699, 42d9c8);
@@ -18,7 +18,8 @@ font-family: 'Quicksand', sans-serif;
   color: #42d9c8;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
-  text-decoration: none;}
+  text-decoration: none;
+  float: left;}
 
   .dog:hover {
 
@@ -26,12 +27,19 @@ font-family: 'Quicksand', sans-serif;
      text-decoration: none;
 
   }
+
+  .buy {float: right;
+        }
   </style>
 </head>
 <body>
 <h1 id="homepage-heading">Candy & Co</h1>
 <form method="get" action="/about.html">
   <button class="dog"type="submit">About</button>
+</form>
+
+<form method="get" action="/shop.html">
+  <button class="dog buy" type="submit">Buy</button>
 </form>
 
 </body>
