--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ font-family: 'Quicksand', sans-serif;
 
   }
 
+  .dog:active::after {
+    content: "  >>";
+
+  }
+
   .buy {float: right;
         }
   </style>
