--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ font-family: 'Quicksand', sans-serif;
   }
 
   .dog:hover::after {
-    content: "  >>";
+    content: "  ->";
 
   }
 
@@ -55,7 +55,7 @@ font-family: 'Quicksand', sans-serif;
 
     }
 
-  .classd:hover::before {content: "<<  ";}
+  .classd:hover::before {content: "<-  ";}
 
 
   </style>
