--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ font-family: 'Quicksand', sans-serif;
 </form>
 
 <form method="get" action="/shop.html">
-  <button class="classd" type="submit">Buy</button>
+  <button class="classd" type="submit">Shop</button>
 </form>
 
 </body>
