--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+﻿<html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
   <style>
+
+  body {background-image: url("CC_Logo.png");}
 #homepage-heading { font-family: 'Quicksand', sans-serif;
         text-align: center; font-size: 70px; color:#42d9c8;}
 .dog {  background: #268699;
@@ -61,9 +63,8 @@ font-family: 'Quicksand', sans-serif;
   </style>
 </head>
 <body>
-  <div>
-    <h1 id="homepage-heading">Candy & Co</h1>
-
+  <div style="">
+    <h1 id="homepage-heading">Candy &amp; Co</h1>
 </div>
 <form method="get" action="/about.html">
   <button class="dog"type="submit">About</button>
