--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
   <style>
 
-  body {background-image: url("CC_Logo.png");}
+  body {}
 #homepage-heading { font-family: 'Quicksand', sans-serif;
         text-align: center; font-size: 70px; color:#42d9c8;}
 .dog {  background: #268699;
@@ -59,12 +59,16 @@ font-family: 'Quicksand', sans-serif;
 
   .classd:hover::before {content: "<-  ";}
 
+  .helo {padding-right: 10px; vertical-align: bottom;}
+
 
   </style>
 </head>
 <body>
   <div style="">
-    <h1 id="homepage-heading">Candy &amp; Co</h1>
+
+    <h1 id="homepage-heading"><img src="CC_Logo.png" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
+
 </div>
 <form method="get" action="/about.html">
   <button class="dog"type="submit">About</button>
