--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-﻿<html>
+<!DOCTYPE html>
+
+<html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
@@ -77,6 +79,8 @@ font-family: 'Quicksand', sans-serif;
 <form method="get" action="/shop.html">
   <button class="classd" type="submit">Shop</button>
 </form>
+
+<br><h2 style="font-size: 50px !important;" id="homepage-heading"></h2>
 
 </body>
 </html>
