--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ font-family: 'Quicksand', sans-serif;
   .classd:hover::before {content: "<-  ";}
 
   .helo {padding-right: 10px; vertical-align: bottom;}
-
+body {background-color: #42d9c8
+      opacity: 0.75;}
 
   </style>
 </head>
