k  5yeb6y4h43hy6wb

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<title>
+
+Candy &amp; Co: Home
+</title>  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
   <style>
 
