--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 
 <html>
 <head>
+
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107042543-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107042543-2');
+</script>
+
 <title>
 
 Candy &amp; Co: Home
