--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,17 @@
 
 <head>
 
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107042543-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107042543-2');
+</script>
+
+
 <title>
 </title>
 
@@ -11,7 +22,7 @@
 <body>
 
 
-<p>uyfyfuugfghhdg</p>
+<h1>Shop</h1>
 
 
 
