--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
 
+<html>
 <head>
 
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
@@ -12,23 +13,89 @@
   gtag('config', 'UA-107042543-2');
 </script>
 
-
 <title>
-</title>
 
-<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-<style>  body{font-family: 'Quicksand', sans-serif;}
-</style>
+Candy &amp; Co: Home
+</title>  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+<link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
+  <style>
+
+  body {}
+#homepage-heading { font-family: 'Quicksand', sans-serif;
+        text-align: center; font-size: 70px; color:#42d9c8;}
+.dog {  background: #268699;
+  background-image: -webkit-linear-gradient(top, #268699, 42d9c8);
+  background-image: -moz-linear-gradient(top, #268699, 42d9c8);
+  background-image: -ms-linear-gradient(top, #268699, 42d9c8);
+  background-image: -o-linear-gradient(top, #268699, 42d9c8);
+  background-image: linear-gradient(to bottom, #268699, 42d9c8);
+  -webkit-border-radius: 60;
+  -moz-border-radius: 60;
+  border-radius: 60px;
+font-family: 'Quicksand', sans-serif;
+  color: #42d9c8;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  float: left;}
+
+  .dog:hover {
+
+    background: #28464b;
+     text-decoration: none;
+
+  }
+
+  .dog:hover::after {
+    content: "  ->";
+
+  }
+
+  .classd {background: #268699;
+    background-image: -webkit-linear-gradient(top, #268699, 42d9c8);
+    background-image: -moz-linear-gradient(top, #268699, 42d9c8);
+    background-image: -ms-linear-gradient(top, #268699, 42d9c8);
+    background-image: -o-linear-gradient(top, #268699, 42d9c8);
+    background-image: linear-gradient(to bottom, #268699, 42d9c8);
+    -webkit-border-radius: 60;
+    -moz-border-radius: 60;
+    border-radius: 60px;
+  font-family: 'Quicksand', sans-serif;
+    color: #42d9c8;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    float: right;}
+    .classd:hover {
+
+      background: #28464b;
+       text-decoration: none;
+
+    }
+
+  .classd:hover::before {content: "<-  ";}
+
+  .helo {padding-right: 10px; vertical-align: bottom;}
+body {background-color: #42d9c8
+      opacity: 0.75;}
+
+  </style>
+</head>
 <body>
+  <div style="">
 
+    <h1 id="homepage-heading"><img src="CC_Logo.png" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
 
-<h1>Shop</h1>
+</div>
+<form method="get" action="/about.html">
+  <button class="dog"type="submit">About</button>
+</form>
 
+<form method="get" action="/shop.html">
+  <button class="classd" type="submit">Shop</button>
+</form>
 
-
+<br><h2 style="font-size: 50px !important;" id="homepage-heading"></h2>
 
 </body>
-
-</head>
-
 </html>
