--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ body {background-color: #42d9c8
 <body>
   <div style="">
 
-    <a href="index.html"><h1 id="homepage-heading"><img src="CC_Logo.png" class="helo" width="100px" height="100px">Candy &amp; Co</h1></a>
+    <a href="index.html"><h1 id="homepage-heading"><img src="CC_Logo.png" class="helo" width="100px" height="100px">Shop</h1></a>
 
 </div>
 <form method="get" action="/about.html">
