--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
 
   gtag('config', 'UA-107042543-2');
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Adds -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5179656957876870"
+     data-ad-slot="1759773341"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <title>
 
 Candy &amp; Co: Home
 </title>  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-<link rel=”shortcut icon” href=”/favicon.ico” mce_href=”/favicon.ico”/>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <style>
 
   body {}
@@ -84,7 +94,7 @@ body {background-color: #42d9c8
 <body>
   <div style="">
 
-    <h1 id="homepage-heading"><img src="CC_Logo.png" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
+    <h1 id="homepage-heading"><img src="CC_Logo.gif" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
 
 </div>
 <form method="get" action="/about.html">
