fcdgfxcfgbnxd fbghkhhtktj nbffdg  gfg xd  f   toby finn bob kill yay ff ghgyrky hkr ktvdykdttukd
kutduktd

--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
 Candy &amp; Co: Home
 </title>  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-  <style>
+<style>
 
   body {}
 #homepage-heading { font-family: 'Quicksand', sans-serif;
@@ -89,14 +89,18 @@ font-family: 'Quicksand', sans-serif;
 body {background-color: #42d9c8
       opacity: 0.75;}
 
+.cat {}
+
+
+
   </style>
+
 </head>
 <body>
-  <div style="">
 
-    <h1 id="homepage-heading"><img src="CC_Logo.gif" class="helo" width="100px" height="100px">Candy &amp; Co</h1>
 
-</div>
+    <a class="cat" href="/home"><h1 id="homepage-heading"><img src="CC_Logo.gif" class="helo" width="100px" height="100px">Candy &amp; Co</h1></a>
+
 <form method="get" action="/about.html">
   <button class="dog"type="submit">About</button>
 </form>
